2002-07-17   Bart Oldeman  <bart.oldeman@btinternet.com>

	* include/ddeml.h (MH_*) Add defines.
	(MONHSZSTRUCT): Add structure and typedefs.
	(MONLINKSTRUCT): Ditto.
	(MONCONVSTRUCT): Ditto.
	(MONCBSTRUCT): Ditto.
	(MONERRSTRUCT): Ditto.
	(MONMSGSTRUCT): Ditto.
	* include/windef.h: Don't define __cdecl or _cdecl for
	__WATCOM__.
	Don't define _export or __export for __WATCOM__.
	* include/windows.h (imm.h): #include.
	* include/winnt.h (LPEXCEPTION_RECORD): Add typedef.

2002-07-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wtypes.h: Remove duplicate #includes of rhc.h and

2002-07-05  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winbase.h (OpenThread): Add prototype.
	* lib/kernel32.def (OpenThread): Add symbol.

2002-07-04  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/wtypes.h (HMETAFILEPICT): Add typedef.

2002-07-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/rpc.h: Conditionally include <windows.h> before
	header guard.
	* include/wtypes.h: Include <rpc.h> and <rpcndr.h> before
	header guard.

2002-07-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (WC_*): Remove some duplicate defines.

2002-07-02  Ken Fitlike  <kenfitlike@hotmail.com>

	* include/commctrl.h (WC_IPADDRESS[AW]): Add defines and
	UNICODE mappings.
	(IPM*): Add defines.
	(IPN_*): Add defines.
	(NMIPADDRESS): Add structure and typedefs.
	(MAKEIPADDRESS): Add macro.
	(MAKEIPRANGE): Add macro.
	(FIRST_IPADDRESS): Add macro.
	(SECOND_IPADDRESS): Add macro.
	(THIRD_IPADDRESS): Add macro.
	(FOURTH_IPADDRESS): Add macro.

2002-06-25  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* include/winbase.h (FILE_FLAG_FIRST_PIPE_INSTANCE): Add constant.

2002-06-26  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winbase.h (WINBASEAPI): Don't define if prior
	definition.

	* include/winioctl.h (PARTITION_FAT32, PARTITION_FAT32_XINT13,
	PARTITION_XINT13, PARTITION_XINT13_EXTENDED, PARTITION_LDM,