@@ -1,3 +1,13 @@
+2002-07-17  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/commdlg.h: Define CDN_* notification message constants
+	as UINT.
+
+2002-07-17  Mattia Barbon  <mbarbon@users.sourceforge.net>
+
+	* include/commctrl.h: Define notification message constants for
+	NMHDR.code as UINT.
+
 2002-07-17   Bart Oldeman  <bart.oldeman@btinternet.com>
 
 	* include/ddeml.h (MH_*) Add defines.
